# CPP_Ray_Tracing

./: .gitignore  .gitmodules  CMakeLists.txt  Fixes.md  License.txt  ReadMe.md  color.cpp  color.h  dirlight.ppm  image.cpp  image.h  light.cpp  light.h  makefile  material.cpp  material.h  ray.h  read_config.cpp  read_config.h  render.cpp  renderer.cpp  renderer.h  scene.json  scene.txt  sphere.cpp  sphere.h  vector3d.cpp  vector3d.h
include/: crt.h  image.h  material.h  ray.h  read_config.h  renderer.h  vector3d.h
src/: CMakeLists.txt  color.cpp  image.cpp  ray.cpp  read_config.cpp  render.cpp  renderer.cpp  vector3d.cpp
src/color/: CMakeLists.txt
src/image/: CMakeLists.txt
src/light/: CMakeLists.txt  light.h
src/lights/: light.cpp
src/material/: CMakeLists.txt  material.cpp
src/objects/: sphere.cpp
src/ray/: CMakeLists.txt
src/read_config/: CMakeLists.txt  read_config.cpp  read_config.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/sphere/: CMakeLists.txt  sphere.cpp  sphere.h
src/vector3d/: CMakeLists.txt
tests/: colortest.cpp  imagetest.cpp  read_configtest.cpp  vectortest.cpp
